--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,10 +1,11 @@
-
+<div>
 <div id="hook"  *ngIf="!accountService.isLoggedIn()">
     <h2>PANFIT is the simplest way to track your workouts</h2>
     <h3>From bicycling to weightlifting, we've got you covered</h3>
     <button>SIGN UP</button>
     </div>
 <svg *ngIf="!accountService.isLoggedIn()" id="feb07f7a-fdbf-4ab3-9cad-32b170840287" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1921 849"><defs><style>.f8d6d9b5-3dd8-4a37-b9bf-e3b0c4094879{fill:#81211e;}.baddd66e-a755-489a-aebe-1228645c9c3e{fill:#ce312c;}.ad228d5a-9bc3-4f7b-997a-1d0862b7ad8d{fill:#0a4;}.ecffc4c7-be78-403c-acc1-be91b5b5f900{fill:#0f6;}.a7eec96e-5524-492c-aca4-b2b40f1b635d{fill:#094152;}.b4747dad-ad86-4281-9ca8-cd0544ee23a8{fill:#126f8c;}</style></defs><polygon class="f8d6d9b5-3dd8-4a37-b9bf-e3b0c4094879" points="1921 18 1 388 1 749 1921 453.75 1921 18"/><polygon class="baddd66e-a755-489a-aebe-1228645c9c3e" points="1920 0 0 370 0 731 1920 435.75 1920 0"/><polyline class="ad228d5a-9bc3-4f7b-997a-1d0862b7ad8d" points="1920 546 1921 849 0 408.5"/><polyline class="ecffc4c7-be78-403c-acc1-be91b5b5f900" points="1920 529 1921 832 0 391.5"/><polygon class="ecffc4c7-be78-403c-acc1-be91b5b5f900" points="0 0 1920 435.75 74 342 0 305.37 0 0"/><polygon class="a7eec96e-5524-492c-aca4-b2b40f1b635d" points="1 71 1921 220 1921 709 1 549 1 71"/><polygon class="b4747dad-ad86-4281-9ca8-cd0544ee23a8" points="0 51 1920 200 1920 689 0 529 0 51"/></svg>
+</div>
 
 
 <div id="info-section" *ngIf="!accountService.isLoggedIn()">
