--- a/src/app/component/home/home.component.sass
+++ b/src/app/component/home/home.component.sass
@@ -91,3 +91,60 @@ svg
     font-size: 15pt
     margin: 0
     text-align: left
+
+@media screen and (min-width: 300px) and (max-width: 600px)
+    #hook
+        top: 20em
+        font-size: 1em
+        padding: 15px
+    #feb07f7a-fdbf-4ab3-9cad-32b170840287
+        transform: scale(3)
+        top: 26em
+    .info
+        padding-right: 10px
+        position: relative
+
+    #info-text
+        padding-top: 2em
+        padding-left: 10px
+        padding-bottom: 45px
+        background-color:#0D5C74
+        margin-top: -25px
+        margin-left: 10px
+        margin-right: 10px
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        margin-bottom: 10px
+        display: grid
+        grid-template-columns: 50% 50%
+        grid-template-rows: 50% 50%
+        grid-gap: 10px
+
+    .info h5
+        margin-bottom: 10px
+        padding: 0
+        font-weight: 600
+        font-size: 18pt
+        text-align: left
+    .info h6
+        font-weight: 300
+        font-size: 12pt
+        margin: 0
+        text-align: left
+            
+@media screen and (min-width: 600px) and (max-width: 850px)
+    #hook
+        top: 20em
+        font-size: 1em
+    #feb07f7a-fdbf-4ab3-9cad-32b170840287
+        transform: scale(2)
+        top: 20em
+        
+
+@media screen and (min-width: 850px) and (max-width: 1300px)
+    #hook
+        top: 20em
+        font-size: 1em
+    #feb07f7a-fdbf-4ab3-9cad-32b170840287
+        transform: scale(1.5)
+        top: 14em
+        
