--- a/src/app/navbar/navbar.component.sass
+++ b/src/app/navbar/navbar.component.sass
@@ -39,3 +39,25 @@ a:hover
     position: absolute
     top: 1em
     right: 1em
+
+@media screen and (min-width: 0px) and (max-width: 600px)
+    ul
+        display: flex
+        flex-direction: column
+        justify-content: center
+        text-align: center
+
+
+    ul:hover .item
+        display: block
+
+
+    nav
+        display: flex
+        justify-content: center
+
+    .item
+        display: none
+        
+
+        
